--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.itmo</groupId>
-    <artifactId>web003</artifactId>
+    <artifactId>web03</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>web003</name>
+    <name>web03</name>
     <packaging>war</packaging>
 
     <properties>
@@ -34,6 +34,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
         </dependency>
     </dependencies>
 
